--- a/Frontend/src/app/components/sidebar/sidebar.component.scss
+++ b/Frontend/src/app/components/sidebar/sidebar.component.scss
@@ -1,9 +1,15 @@
+:host {
+  display: flex;
+  flex-direction: column;
+}
+
 .sidebar {
   width: 240px;
   background: #1e293b;
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
+  flex: 1;
   padding: 20px 12px;
 
   &-brand {
